tests/NormalTests/paczka1/fuzzy1/45275667.err
Error in line 3: Mt2C S227 09,3
Error in line 1: Mt2C S227 14,6
Error in line 9: FH6sAbTMAAf S167 22,3
Error in line 12: Mt2C S755 96,7
Error in line 18: FH6sAbTMAAf S227 83,5
Error in line 29: lGlr A171 92,1
Error in line 21: Mt2C A171 98,4
Error in line 22: 7uepMAfqmg S167 38,2
Error in line 34: 7uepMAfqmg S755 73,9
Error in line 31: lGlr S227 16,0
